day-2/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: vilvert
  name: web-app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    prometheus.io/scrape: 'true'
    ingress.kubernetes.io/service-upstream: "true"
spec:
  rules:
  - host: pokemon.test.com.br
    http:
      paths:
      - path: /
        backend:
          serviceName: web-app
          servicePort: 80
